tests/frontend/fail/array/out_of_bounds_calldata.act
constructor of B
interface constructor(uint[3] c)

iff

  c[4] > 0

creates

  uint x := c[-1]
